--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,45 @@ const CACHE_NAME = 'centro-de-compras-v1';
 const URLS_TO_CACHE = [
   '/',
   '/index.html',
-  '/manifest.json',
-  '/icons/icon-192.png',
-  '/icons/icon-512.png'
-];self.addEventListener('install', event => {
+  '/style.css',
+  '/script.js',
+  '/logos/site.webmanifest',
+  '/logos/favicon-32x32.png',
+  '/logos/favicon-16x16.png',
+  '/logos/apple-touch-icon.png',
+  '/logos/logoscentrodecompras.jpeg',
+  '/imagens/placeholder.jpg',
+  '/imagens/search-icon.png'
+];
+
+self.addEventListener('install', event => {
+  console.log('Service Worker instalado');
   event.waitUntil(
     caches.open(CACHE_NAME).then(cache => cache.addAll(URLS_TO_CACHE))
   );
-});self.addEventListener('fetch', event => {
-  event.respondWith(
-    caches.match(event.request).then(resp => resp || fetch(event.request))
-  );
-});self.addEventListener('install', event => {
-  console.log('Service Worker instalado');
-});self.addEventListener('fetch', event => {
-  event.respondWith(fetch(event.request));
 });
 
+self.addEventListener('activate', event => {
+  event.waitUntil(
+    caches.keys().then(cacheNames => {
+      return Promise.all(
+        cacheNames.map(name => {
+          if (name !== CACHE_NAME) {
+            console.log('Limpando cache antigo:', name);
+            return caches.delete(name);
+          }
+        })
+      );
+    })
+  );
+});
+
+self.addEventListener('fetch', event => {
+  event.respondWith(
+    caches.match(event.request).then(resp => {
+      return resp || fetch(event.request).catch(() => {
+        return new Response('Offline: recurso não disponível', { status: 503 });
+      });
+    })
+  );
+});
