--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "centrodecompra-backend",
+  "name": "centro-de-compras",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "serve -s .",
+    "build": "vite build"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
-    "@octokit/core": "^5.0.0"
+  "devDependencies": {
+    "vite": "^4.0.0",
+    "serve": "^14.0.0"
   }
 }
