--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "centrodecompra",
+  "name": "centro-de-compra",
   "version": "1.0.0",
-  "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && firebase deploy"
-  },
+  "private": true,
   "dependencies": {
-    "firebase": "^10.12.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3"
   },
-  "devDependencies": {
-    "vite": "^5.0.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
