--- a/package.json
+++ b/package.json
@@ -1,29 +1,13 @@
 {
-  "name": "centro-de-compra",
+  "name": "centrodecompra-backend",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3"
-  },
+  "main": "src/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node src/server.js"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.0"
   }
 }
