--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+
   "name": "centrodecompra-backend",
   "version": "1.0.0",
   "main": "src/server.js",
@@ -8,6 +8,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "engines": {
+    "node": "22.14.0"
   }
 }
