--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "@capacitor/android": "^7.2.0",
-    "@capacitor/core": "^7.2.0",
-    "@octokit/core": "^7.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2", // Ajustado para versão estável do Express
     "firebase": "^11.9.1",
-    "firebase-admin": "^12.2.0", // <-- Adicionado esta linha!
+    "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.7.0",
-    "multer": "^2.0.1",
-    "open": "^10.1.2"
+    "multer": "^2.0.1"
   },
   "scripts": {
-    "start": "node server.js" // <-- Sugiro mudar para 'node server.js' para ser explícito
+    "start": "node server.js",
+    "dev": "nodemon server.js", // Adicionado para desenvolvimento local com nodemon
+    "test": "echo \"Error: no test specified\" && exit 1" // Placeholder para testes
   },
   "devDependencies": {
-    "@capacitor/cli": "^7.2.0"
+    "nodemon": "^3.1.7" // Adicionado para recarga automática em desenvolvimento
   }
 }
