--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2", // Ajustado para versão estável do Express
+    "express": "^4.18.2",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -14,10 +14,10 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js", // Adicionado para desenvolvimento local com nodemon
-    "test": "echo \"Error: no test specified\" && exit 1" // Placeholder para testes
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7" // Adicionado para recarga automática em desenvolvimento
+    "nodemon": "^3.1.7"
   }
 }
