--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "centrodecompra-server",
+  "name": "api-centro-de-compras",
   "version": "1.0.0",
-  "main": "server.js",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "firebase": "^11.9.1",
-    "firebase-admin": "^12.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mercadopago": "^2.7.0",
-    "multer": "^2.0.1"
-  },
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "googleapis": "^121.0.0"
   }
 }
