--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
-  "name": "api-centro-de-compras",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.0.3",
-    "cors": "^2.8.5",
-    "firebase": "^10.12.2"
+    "firebase-admin": "^11.10.1",
+    "formidable": "^3.5.0"
   }
 }
