--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "centro-de-compras-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
