--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
-    "formidable": "^3.5.0"
+    "formidable": "^3.5.0",
+    "cors": "^2.8.5"
   }
 }
