--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "centro-de-compras-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
-    "formidable": "^3.5.0",
+    "firebase": "^10.12.2",
+    "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.4.5",
     "cors": "^2.8.5"
   }
 }
